--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "gymnasium[box2d,classic-control]>=1.2.0",
+    "gymnasium[box2d,classic-control,mujoco]>=1.2.0",
     "ipykernel>=6.30.1",
     "matplotlib>=3.10.5",
     "torch==2.7",
