--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "gymnasium[box2d,classic-control,mujoco]>=1.2.0",
     "ipykernel>=6.30.1",
     "matplotlib>=3.10.5",
+    "scipy>=1.16.2",
     "torch==2.7",
     "tqdm>=4.67.1",
 ]
